# midday_coding_challenges

./: .gitignore  README.md  potential_challenges.md
20200909_dashed_vowels/: .RData  .Rhistory
20200914_sort_by_y/: .RData  .Rhistory
20200915_count_vowels/: .RData  .Rhistory  count_vowels.R
20201013_gather_stats/: .Rhistory  gather_stats.R
20201015_complete_csv/: .Rhistory  complete_csv.R  completed_people.csv  first_names.rds  last_names.rds
20201024_addends_in_list/: .RData  .Rhistory
20201102_sort_tasks/: .RData  .Rhistory  sorted_data.csv
20201103_zip_it_if_you_can/: .RData  .Rhistory
20201106_find_discount/: .RData  .Rhistory  find_discount.R
20201111_array_extender/: extend_array.R
20201112_scrabble_hand/: hand_value.R
20201113_substitution_cipher/: substitution_cipher.R
20201119_closing_brackets/: .RData  .Rhistory  closing_brackets.R
20201120_longest_common_prefix/: .RData  .Rhistory  longest_common_prefix.R
20201123_running_sum/: .RData  .Rhistory  running_sum.html
20201124_gimme_some_candy/: .Rhistory  gimme_some_candy.Rmd  gimme_some_candy.html
20201125_binary_search/: .RData  .Rhistory  test_small_vec_with_without_mi.R
20210312_count_web_words/count_web_words_rust/: Cargo.toml
20210312_count_web_words/count_web_words_rust/src/: lib.rs
20210611_prime_factors/rust/: Cargo.toml
20210611_prime_factors/rust/src/: main.rs
20220801_swapi_cli/swapi/: Cargo.toml
20220801_swapi_cli/swapi/src/: cli.rs  main.rs
20220801_swapi_cli/swapi/src/api/: films.rs  mod.rs  people.rs  planets.rs  species.rs  starships.rs  vehicles.rs
(+483 files in other folders)
