[package]
name = "count_web_words_rust"
version = "0.1.0"
authors = ["Eric Burden <eric.w.burden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
regex = "1"