[package]
name = "eb-prime-factor"
version = "0.1.0"
authors = ["Eric Burden <eric.w.burden@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Calculates the prime factors of a given number."
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
