[package]
name = "swapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
eyre = "0.6.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
textwrap = "0.15.0"
tokio = { version = "1", features = ["full"] }
